--- a/appointa/index.html
+++ b/appointa/index.html
@@ -163,7 +163,7 @@
 
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=720%2C570%2C0.52&scaling=scale-down&starting-point-node-id=1714%3A9456"
-        target="_blank"> <button class="button-35">Slide Decks</button></a>
+          target="_blank"> <button class="button-35">Slide Decks</button></a>
       </div>
     </div>
 
@@ -172,7 +172,7 @@
       <img class="displayNoneDesktop" src="MockupS.png" alt="APPOINTA">
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=720%2C570%2C0.52&scaling=scale-down&starting-point-node-id=1714%3A9456"
-        target="_blank"> <button class="button-35">Slide Decks</button></a>
+          target="_blank"> <button class="button-35">Slide Decks</button></a>
       </div>
 
     </div>
@@ -198,7 +198,8 @@
         <div class="elementInner">
 
           <h3><strong>Solution</strong></h3>
-          <h4> Provide a simple and straightforward way for recruiters to quickly and easily schedule
+          <h4> Provide a simple and straightforward way for recruiters to quickly and easily
+            schedule
             interviews for both the hiring team and the candidate in order to achieve the company
             hiring headcount requirement</h4>
         </div>
@@ -213,7 +214,7 @@
 
           <h3><strong>Duration</strong></h3>
           <h4>June - August 2022 </h4>
-          <h4>10 Hours per week  </h4>
+          <h4>10 Hours per week </h4>
 
         </div>
       </div>
@@ -432,7 +433,7 @@
 
 
             <li class=""><a href="#userFlow">User flow </a></li>
-            <li class=""><a href="#informationArchitecture">information architecture</a></li>
+            <li class=""><a href="#informationArchitecture">Information architecture</a></li>
 
             <li class=""><a href="#wireframes">Lo-fi sketch</a></li>
             <li class=""><a href="#mid-fiWireframes">Mid-fi screen flow &#38; testing </a></li>
@@ -1094,7 +1095,7 @@
       <div class="colorBgAPPOINTA">
 
 
- 
+
         <section id="affinityMap">
           <!-- Arrow -->
           <div class="wrapper">
@@ -1168,7 +1169,8 @@
 
                     <ul>
                       <li>Everyone can see the available appointments</li>
-                      <li>A way to share information such as availability, interview skills, working hour, time zone</li>
+                      <li>A way to share information such as availability, interview skills, working
+                        hour, time zone</li>
                     </ul>
                   </div>
                 </div>
@@ -1292,8 +1294,8 @@
       </div>
       <div class="blankHS"></div>
 
-      
-      
+
+
       <section id="opportunities" class="colorBgAPPOINTA">
 
         <!-- Arrow -->
@@ -1380,8 +1382,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="Grid">
-                  <img class="modal-target" src="diagram_priorityMatrix.svg"
-                    alt="Priority matrix">
+                  <img class="modal-target" src="diagram_priorityMatrix.svg" alt="Priority matrix">
 
                 </div>
               </div>
@@ -1526,7 +1527,7 @@
                   </p>
                   <p>Step 1: Recruiters invite team </p>
                   <p> Step 2: Team member create account and sync calendar </p>
-                  <p> Step 3: Create interview type, set required skillss </p>
+                  <p> Step 3: Create interview type, setup required interview skills </p>
                   <p> Step 4: Schedule interview </p>
 
                 </h4>
@@ -1610,18 +1611,17 @@
         </div>
         <!-- Arrow -->
         <div class="blankHS"></div>
-
-        <!-- admin -->
-
-        <div class="Grid Grid--full u-textCenter">
+        <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
-            <img class="iconM" src="ppl_recruiter.png" alt="Administration account">
-            <div class="blankHXS"></div>
-
-            <h3>Administration account</h3>
-            <h6>Recruiters &#47; Hiring managers</h6>
+            <div class="element">
+              <div class="element">
+                <p class="specialTextXS colorAPPOINTAYellow u-textCenter">&#8220;Drawing mid-fi screens for the most important flows allows me to test out different ideas while helping to spot potential problems early on in the design process&#8221;</p>
+              </div>
+            </div>
           </div>
         </div>
+
+
 
         <div class="blankHS"></div>
 
@@ -1737,7 +1737,29 @@
             </div>
 
           </div>
+
           <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="element">
+                  <p class="specialTextXS colorAPPOINTAYellow u-textCenter">&#8220;In general, test wireframes can be a helpful tool for evaluating the user experience of a proposed design.&#8221;</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="Grid Grid--full u-textCenter">
+            <div class="Grid-cell">
+              <img class="iconM" src="ppl_recruiter.png" alt="Administration account">
+              <div class="blankHXS"></div>
+
+              <h3>Administration account</h3>
+              <h6>Recruiters &#47; Hiring managers</h6>
+            </div>
+          </div>
+          <div class="Grid Grid--full wrapper">
+
             <div class="Grid-cell">
               <div class="element">
                 <div class="element colorAPPOINTABgBlue leftVerLine APPOINTA">
