--- a/appointa/index.html
+++ b/appointa/index.html
@@ -65,6 +65,20 @@
     rel="stylesheet">
   <!--font font-family: 'Lato', sans-serif; -->
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap"
+    rel="stylesheet">
+  <!--font font-family: 'Oswald'; -->
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+
+  
+
+
+
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     rel="stylesheet">
   <!--font awesome -->
@@ -1316,8 +1330,8 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <p class="specialTextXS colorAPPOINTAYellow u-textCenter">"How might we provide a
-                  better scheduling experience for the recruiting team and candidates?"</p>
+                <p class="specialTextXS colorAPPOINTAYellow u-textCenter">How might we provide a
+                  better scheduling experience for the recruiting team and candidates&#63;</p>
               </div>
             </div>
           </div>
@@ -1394,10 +1408,11 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <p class="specialTextXS colorAPPOINTAYellow u-textCenter">&#8220;Based on current
-                  research, the most important function of this recruiting scheduling app would be
-                  to have a way for users to easily schedule and track their interviews on their
-                  own.&#8221;
+                <p class="specialTextXS colorAPPOINTAYellow u-textCenter">A recruiter needs to be
+                  able to quickly and easily schedule an interview with a potential candidate. The
+                  process should be simple and streamlined, so that the recruiter can focus on
+                  finding the best candidates for the job.
+
                 </p>
 
               </div>
@@ -1615,7 +1630,9 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <p class="specialTextXS colorAPPOINTAYellow u-textCenter">&#8220;Drawing mid-fi screens for the most important flows allows me to test out different ideas while helping to spot potential problems early on in the design process&#8221;</p>
+                <p class="specialTextXS colorAPPOINTAYellow u-textCenter">Drawing mid-fi
+                  screens for the most important flows allows me to test out different ideas while
+                  helping to spot potential problems early on in the design process</p>
               </div>
             </div>
           </div>
@@ -1742,7 +1759,9 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextXS colorAPPOINTAYellow u-textCenter">&#8220;In general, test wireframes can be a helpful tool for evaluating the user experience of a proposed design.&#8221;</p>
+                  <p class="specialTextXS colorAPPOINTAYellow u-textCenter">In general, test
+                    wireframes can be a helpful tool for evaluating the user experience of a
+                    proposed design.</p>
                 </div>
               </div>
             </div>
@@ -2128,7 +2147,17 @@
             </div>
           </div>
           <!-- Arrow -->
-
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="element">
+                  <p class="specialTextXS colorAPPOINTAYellow u-textCenter">In general, test
+                    wireframes can be a helpful tool for evaluating the user experience of a
+                    proposed design.</p>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="wrapper">
             <div class="flex-container cardAPPOINTA">
               <div class="left-zone">
