--- a/appointa/index.html
+++ b/appointa/index.html
@@ -75,7 +75,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 
-  
+
 
 
 
@@ -625,7 +625,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextXS colorAPPOINTAYellow u-textCenter">"Discover the
+                  <p class="specialTextHR colorAPPOINTAYellow u-textCenter">"Discover the
                     opportunity to improve the interview scheduling experience for recruiting team"
                   </p>
 
@@ -1012,10 +1012,9 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <p class="specialTextXS colorAPPOINTAYellow u-textCenter">&#8220;On average,
-                  recruiters
-                  are spending two-thirds of their overall hiring time on the interview
-                  process.&#8221;
+                <p class="specialTextHR colorAPPOINTAYellow u-textCenter">On average,
+                  recruiters are spending two-thirds of their overall hiring time on the interview
+                  process.
                 </p>
 
               </div>
@@ -1330,7 +1329,7 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <p class="specialTextXS colorAPPOINTAYellow u-textCenter">How might we provide a
+                <p class="specialTextHR colorAPPOINTAYellow u-textCenter">How might we provide a
                   better scheduling experience for the recruiting team and candidates&#63;</p>
               </div>
             </div>
@@ -1408,7 +1407,7 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <p class="specialTextXS colorAPPOINTAYellow u-textCenter">A recruiter needs to be
+                <p class="specialTextHR colorAPPOINTAYellow u-textCenter">A recruiter needs to be
                   able to quickly and easily schedule an interview with a potential candidate. The
                   process should be simple and streamlined, so that the recruiter can focus on
                   finding the best candidates for the job.
@@ -1541,9 +1540,9 @@
                   <p><strong>Key user flows</strong>
                   </p>
                   <p>Step 1: Recruiters invite team </p>
-                  <p> Step 2: Team member create account and sync calendar </p>
-                  <p> Step 3: Create interview type, setup required interview skills </p>
-                  <p> Step 4: Schedule interview </p>
+                  <p>Step 2: Team member create account and sync calendar </p>
+                  <p>Step 3: Create interview type, setup required interview skills </p>
+                  <p>Step 4: Schedule interview </p>
 
                 </h4>
               </div>
@@ -1609,6 +1608,21 @@
         <!-- wireframes -->
       </section>
       <div class="blankHS"></div>
+      <div class="Grid Grid--full wrapper">
+        <div class="Grid-cell">
+          <div class="element">
+            <div class="element">
+              <p class="specialTextHR colorAPPOINTAYellow u-textCenter">Drawing mid-fi
+                screens for the most important flows allows me to test out different ideas while
+                helping to spot potential problems early on in the design process</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+      <div class="blankHS"></div>
 
       <section id="mid-fiWireframes">
         <!-- Arrow -->
@@ -1626,34 +1640,18 @@
         </div>
         <!-- Arrow -->
         <div class="blankHS"></div>
-        <div class="Grid Grid--full wrapper">
-          <div class="Grid-cell">
-            <div class="element">
-              <div class="element">
-                <p class="specialTextXS colorAPPOINTAYellow u-textCenter">Drawing mid-fi
-                  screens for the most important flows allows me to test out different ideas while
-                  helping to spot potential problems early on in the design process</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-
-        <div class="blankHS"></div>
-
-
-
-
         <div class="wrapper">
-          <div class="Grid Grid--full">
+          <div class="Grid Grid--full u-textCenter">
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="colorAPPOINTA"> Step 1: Invite team </h3>
+                <h3 class="colorAPPOINTA">Invite team </h3>
               </div>
             </div>
-          </div>
-          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <img src="diagram_keyFlows_horizontal_inviteTeam.svg" alt="Invite team">
+              </div>
+            </div>
             <div class="Grid-cell">
               <div class="element">
                 <img class="shadowFilter modal-target" src="userflow_Recruiter_teamManagement.svg"
@@ -1661,16 +1659,39 @@
               </div>
             </div>
           </div>
-          <div class="blankHXS"></div>
 
-          <div class="Grid Grid--full">
+          <div class="blankHS"></div>
+          <div class="Grid Grid--full u-textCenter">
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="colorAPPOINTA">Step 2: Create interview </h3>
+                <h3 class="colorAPPOINTA">Join as team member</h3>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <img src="diagram_keyFlows_horizontal_memberJoin.svg" alt="Team member join">
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="shadowFilter modal-target" src="userflow_Member_signup.svg"
+                  alt="Log in or sign up">
               </div>
             </div>
           </div>
-          <div class="Grid Grid--full">
+
+          <div class="blankHS"></div>
+          <div class="Grid Grid--full u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+                <h3 class="colorAPPOINTA">Create interview </h3>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <img src="diagram_keyFlows_horizontal_createInterview.svg" alt="Create interview">
+              </div>
+            </div>
             <div class="Grid-cell">
               <div class="element">
                 <img class="shadowFilter modal-target" src="userflow_Recruiter_createInterview.svg"
@@ -1678,17 +1699,21 @@
               </div>
             </div>
           </div>
-          <div class="blankHXS"></div>
 
-          <div class="Grid Grid--full">
+
+          <div class="blankHXS"></div>
+          <div class="Grid Grid--full u-textCenter">
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="colorAPPOINTA">Step 3: Schedule interview</h3>
+                <h3 class="colorAPPOINTA">Schedule interview </h3>
               </div>
             </div>
-          </div>
-
-          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <img src="diagram_keyFlows_horizontal_schedulingInterview.svg"
+                  alt="Schedule interview">
+              </div>
+            </div>
             <div class="Grid-cell">
               <div class="element">
                 <img class="shadowFilter modal-target" src="userflow_Candidate.svg"
@@ -1696,70 +1721,52 @@
               </div>
             </div>
           </div>
+
+
           <div class="blankHXS"></div>
 
 
-
-          <div class="Grid Grid--full">
+          <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="colorAPPOINTA">Step 4: View interviews </h3>
+                <div class="element colorAPPOINTABgBlue leftVerLine APPOINTA">
+                  <h4>
+
+
+                    <p> <strong>Testing</strong></p>
+                    <ul>
+                      <li> Test each flow separately </li>
+                      <li> Test the all flows
+                      </li>
+
+                    </ul>
+
+                    <p> <strong>Insights</strong></p>
+                    <ul>
+                      <li> Recruiters may sometimes <strong class="textDecor APPOINTA">book
+                          interviews for condidates</strong> </li>
+
+                    </ul>
+
+
+                  </h4>
+                </div>
               </div>
             </div>
           </div>
-          <div class="blankHXS"></div>
 
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <img class="shadowFilter modal-target"
-                  src="userflow_Recruiter_scheduledInterviews.svg" alt="Log in or sign up">
-              </div>
-            </div>
-          </div>
 
 
 
 
           <div class="blankHS"></div>
-          <div class="Grid Grid--gutters Grid--1of3">
-            <div class="Grid-cell">
-              <div class="element">
-                <h3 class="">Testing</h3>
-                <ul>
-                  <li>Invite team members</li>
-                  <li>Setup team members' skills</li>
-                  <li>Create a new type of interview</li>
-                  <li>Cancel a scheduled interview</li>
-                  <li>Remove team members from the list</li>
-                </ul>
-                <div class="blankHXS"></div>
 
-                <h3 class="">Insights</h3>
-                <ul>
-                  <li>Recruiter wants to book the interview by themself</li>
-
-                  <li>Ability to reschedule appointment</li>
-                  <li>Ability to link to the candidate information page, or easy to scan candidate
-                    information</li>
-                  <li>Able to separate different types of interviews</li>
-
-                </ul>
-              </div>
-            </div>
-
-            <div class="Grid-cell">
-              <div class="element"> <img class="cardAPPOINTA shadowBox"
-                  src="testingExistingUser.gif" alt="Existing User"></div>
-            </div>
-
-          </div>
 
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextXS colorAPPOINTAYellow u-textCenter">In general, test
+                  <p class="specialTextHR colorAPPOINTAYellow u-textCenter">In general, test
                     wireframes can be a helpful tool for evaluating the user experience of a
                     proposed design.</p>
                 </div>
@@ -1898,52 +1905,7 @@
 
 
 
-        <div class="Grid Grid--full wrapper">
-          <div class="Grid-cell">
-            <div class="element">
-              <div class="element colorAPPOINTABgBlue leftVerLine APPOINTA">
-                <h4>
-                  <p>After usability testing and revisiting the user interview, the job interview
-                    process is most likely <strong class="textDecor APPOINTA">controlled by
-                      recruiters</strong> and recruiting coordinators. From the job interview to
-                    the
-                    final offer, they may have several interviews they are related, such as phone
-                    screens and technical interviews, the interviewers need to know the candidate
-                    interview status. Each interview should show the candidate's interview status
-                    and be
-                    able to link to the candidates' interview management website such as
-                    Greenhouse.
-                  </p>
 
-                  <p> <strong>Flows</strong></p>
-                  <ul>
-                    <li> <strong class="textDecor APPOINTA">Navigation</strong> needs to be more
-                      straightforward </li>
-                    <li> Need to design the <strong class="textDecor APPOINTA">profile</strong>
-                      page
-                    </li>
-
-                  </ul>
-
-                  <p> <strong>Features</strong></p>
-                  <ul>
-                    <li> Recruiters may sometimes <strong class="textDecor APPOINTA">book
-                        interviews
-                        for condidates</strong> </li>
-                    <li> Ability to book <strong class="textDecor APPOINTA">a
-                        set of interviews</strong> </li>
-                    <li> May need to have <strong class="textDecor APPOINTA">interview
-                        groups</strong>for next version</li>
-                    <li> team member bulk edit feature is not necessary for
-                      the first version </li>
-                  </ul>
-
-
-                </h4>
-              </div>
-            </div>
-          </div>
-        </div>
 
 
 
@@ -2147,17 +2109,6 @@
             </div>
           </div>
           <!-- Arrow -->
-          <div class="Grid Grid--full wrapper">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="element">
-                  <p class="specialTextXS colorAPPOINTAYellow u-textCenter">In general, test
-                    wireframes can be a helpful tool for evaluating the user experience of a
-                    proposed design.</p>
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="wrapper">
             <div class="flex-container cardAPPOINTA">
               <div class="left-zone">
@@ -2214,6 +2165,19 @@
 
 
           </div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="element">
+                  <p class="specialTextHR colorAPPOINTAYellow u-textCenter">A design system helps to
+                    ensure that all UI elements are consistent in terms of style, color, and layout.
+                    This helps to create a cohesive look and feel for a product, and makes it easier
+                    for users to navigate and use the product.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <!-- UI -->
 
         </section>
@@ -2230,6 +2194,8 @@
 
     <!-- takeaways -->
     <section id="takeaways">
+
+
       <!-- Arrow -->
       <div class="wrapper">
         <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
@@ -2244,13 +2210,43 @@
         </div>
       </div>
       <!-- Arrow -->
+
+
       <div class="Grid Grid--full wrapper">
+
         <div class="Grid-cell">
           <div class="element">
-            <div class="elementInner colorAPPOINTABgBlue leftVerLine APPOINTA">
+            <div class="element colorAPPOINTABgBlue leftVerLine APPOINTA">
               <h4>
-                <p>Understanding the use case and product goal is important in the beginning. </p>
-                <p>Build minimal features and test with the goal statement</p>
+                <p class="colorAPPOINTALt specialTextXS">While this product is just a concept, there
+                  are still takeaways!</p>
+
+
+                <p> <strong>What went well so far&#58;</strong></p>
+                <ul>
+                  <li> <strong class="textDecor APPOINTA">Navigation</strong> needs to be more
+                    straightforward </li>
+                  <li> Need to design the <strong class="textDecor APPOINTA">profile</strong>
+                    page
+                  </li>
+
+                </ul>
+                <p> <strong>What could be improved&#58;</strong></p>
+
+                <p> <strong>Next step&#58;</strong></p>
+                <ul>
+                  <li> Recruiters may sometimes <strong class="textDecor APPOINTA">book
+                      interviews
+                      for condidates</strong> </li>
+                  <li> Ability to book <strong class="textDecor APPOINTA">a
+                      set of interviews</strong> </li>
+                  <li> May need to have <strong class="textDecor APPOINTA">interview
+                      groups</strong>for next version</li>
+                  <li> team member bulk edit feature is not necessary for
+                    the first version </li>
+                </ul>
+
+
               </h4>
             </div>
           </div>
