--- a/seer/index.html
+++ b/seer/index.html
@@ -458,7 +458,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextXS colorSEEROrange u-textCenter">&#8220; Understanding the
+                  <p class="specialTextHR colorSEEROrange u-textCenter">&#8220; Understanding the
                     problem and opportunities for businesses search and track customer sentiment on
                     Reddit &#8221;
                   </p>
