--- a/appointa/index.html
+++ b/appointa/index.html
@@ -1573,7 +1573,7 @@
         <div class="Grid Grid--full u-textCenter wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <img class="shadowFilter modal-target" src="diagram_informationArchitecture.svg"
+              <img class="shadowFilter modal-target" src="diagram_informationArchitecture_V1.svg"
                 alt="Sitemap">
             </div>
           </div>
@@ -1612,9 +1612,7 @@
         <div class="Grid-cell">
           <div class="element">
             <div class="element">
-              <p class="specialTextHR colorAPPOINTAYellow u-textCenter">Drawing mid-fi
-                screens for the most important flows allows me to test out different ideas while
-                helping to spot potential problems early on in the design process</p>
+              <p class="specialTextHR colorAPPOINTAYellow u-textCenter">The goal of the lo-fi sketch is to ensure recruiters check interview team availability and schedule interviews for both parties easily and quickly.</p>
             </div>
           </div>
         </div>
@@ -1716,7 +1714,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <img class="shadowFilter modal-target" src="userflow_Candidate.svg"
+                <img class="shadowFilter modal-target" src="userflow_Recruiter_scheduleInterview.svg"
                   alt="Log in or sign up">
               </div>
             </div>
@@ -1732,23 +1730,25 @@
                 <div class="element colorAPPOINTABgBlue leftVerLine APPOINTA">
                   <h4>
 
+                    <p> <strong>Goal of the testing</strong></p>
+                    <ul>
+                      <li> Does the design solve the problem? </li>
+                      <li> Is it easy to schedule an interview than before? </li>
 
-                    <p> <strong>Testing</strong></p>
+                    </ul>
+                    <p> <strong>Test with potential users</strong></p>
                     <ul>
                       <li> Test each flow separately </li>
-                      <li> Test the all flows
-                      </li>
-
+                      <li> Test the all flows together </li>
                     </ul>
-
-                    <p> <strong>Insights</strong></p>
+                    <p> <strong>Insights from testing</strong></p>
                     <ul>
-                      <li> Recruiters may sometimes <strong class="textDecor APPOINTA">book
-                          interviews for condidates</strong> </li>
+                      <li> A way to share a link with everyone in the company instead of entering all emails in the small box </li>
+                      <li> Add skill to a single member on the table </li>
+                      <li> Ability to manage interview skills </li>
+                      <li> The interview may include multiple interviewers </li>
 
                     </ul>
-
-
                   </h4>
                 </div>
               </div>
